syntax = "proto3";

package test.identity;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "test/identity/params.proto";
import "test/identity/identity.proto";

option go_package = "github.com/AnhPhix3405/test/x/identity/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/AnhPhix3405/test/identity/params";
  
  }
  
  // Queries a list of Identity items.
  rpc Identity    (QueryGetIdentityRequest) returns (QueryGetIdentityResponse) {
    option (google.api.http).get = "/AnhPhix3405/test/identity/identity/{id}";
  
  }
  rpc IdentityAll (QueryAllIdentityRequest) returns (QueryAllIdentityResponse) {
    option (google.api.http).get = "/AnhPhix3405/test/identity/identity";
  
  }
  
  // Queries a list of IdentityByNationalId items.
  rpc IdentityByNationalId (QueryIdentityByNationalIdRequest) returns (QueryIdentityByNationalIdResponse) {
    option (google.api.http).get = "/AnhPhix3405/test/identity/identity_by_national_id/{nationalIdHash}";
  
  }
  
  
  // Queries a list of IdentityByOwner items.
  rpc IdentityByOwner (QueryIdentityByOwnerRequest) returns (QueryIdentityByOwnerResponse) {
    option (google.api.http).get = "/AnhPhix3405/test/identity/identity_by_owner/{owner}";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetIdentityRequest {
  uint64 id = 1;
}

message QueryGetIdentityResponse {
  Identity Identity = 1 [(gogoproto.nullable) = false];
}

message QueryAllIdentityRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllIdentityResponse {
  repeated Identity                               Identity   = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryIdentityByNationalIdRequest {
  string nationalIdHash = 1;
}

message QueryIdentityByNationalIdResponse {
  Identity identity = 1;
}

message QueryIdentityByOwnerRequest {
  string owner = 1;
}

message QueryIdentityByOwnerResponse {
  Identity identity = 1;
}

